JJ-theme/css/styles.css
/* ... */
.imageNav {
	font-style: italic;
	line-height: 1.6em;
	color: #888;
	position: fixed;
	left: 1000px;
	top: 100px;
}

.imageNav ul {
	list-style: none;
	margin: 0px;
}
.imageNav ul li {
	list-style: none;
	cursor: pointer;
}

.imageNav span {
 	background-image: url(../images/pointer.png);
	width: 18px;
	height: 18px;
	display: block;
	position: absolute;
	left: -25px;
	top: 3px;
}


.lightGrey {
	background-color: #ddd;
	/* background-image: url(../images/tire_pile_9c.jpg); */
	background-position: 100px 100px;
	width: 210px;
}
.midGrey {
	background-color: #555;
	/* background-image: url(../images/tire_pile_9c.jpg); */
	background-position: 200px 200px;
	width: 280px;
}
.darkGrey {
	background-color: #333;
	/* background-image: url(../images/tire_pile_9c.jpg);*/ 
	background-position: 300px 300px;
	width: 275px;
}

.black {
	background-color: #000;
	/* background-image: url(../images/tire_pile_9c.jpg);*/
}

.js .portfolioItem {
	display: none;
}

.js #firstItem {
	display: block;
}

.hireUs {
	z-index: 0;
}


.jbasewrap {

}

/*-------------------------------- <footer> */

.footer {
	background: rgb(61,61,61); /* Old browsers */
	background: -moz-linear-gradient(top, rgba(61,61,61,1) 0%, rgba(34,34,34,1) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(61,61,61,1)), color-stop(100%,rgba(34,34,34,1))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, rgba(61,61,61,1) 0%,rgba(34,34,34,1) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, rgba(61,61,61,1) 0%,rgba(34,34,34,1) 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, rgba(61,61,61,1) 0%,rgba(34,34,34,1) 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d3d3d', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, rgba(61,61,61,1) 0%,rgba(34,34,34,1) 100%); /* W3C */

	font-size: 1.4em;
	line-height: 1.514em;
	color: white;
	padding-top: 30px;
	padding-left: 30px;
	z-index: 0;
	position: relative;
}

.footer:after {
	position: absolute;
	content: '';
	background-image:  url(../images/paper-dark.png) ;
	width: 100%;
	height: 100%;
	top: 0px;
	left: 0px;
	background-color: transparent;
}

.footer a {
	border-bottom: none;
	text-decoration: none;
	color: white;
	padding: 0px 3px;
	background-color: #333;
/*	-moz-border-radius: 4px; /* FF1+ */
	-webkit-border-radius: 4px; /* Saf3+, Chrome */
	border-radius: 4px; /* Opera 10.5, IE 9 */	
}

.footer a:hover {
	border-bottom: none;
	text-decoration: none;
	background-color: #fee7b1;
	color: #151515;
	
}

.footer h3, .footer h4, .footer h3 a, .footer h4 a {
	font-family: 'nevisBold', 'Gotham HTF', 'Helvetica Neue LT Std', 'Helvetica Neue', Helvetica, Arial, sans-serif;
	color: #fee7b1;
	text-transform: uppercase;
	letter-spacing: 0.08em;
	text-decoration: none;
	border-bottom: none;
	background-color: transparent;
}

.footer h3 {
	font-size: 0.85em;
}

.footer h4 {
	font-size: 0.75em;
}

.footer #leftColumn, .footer #middleColumn, .footer #rightColumn {
	float: left;
}

.footer #leftColumn {
	width: 300px;
	margin-right: 20px;
}

.footer #middleColumn {
	width: 410px;
	padding: 0px 10px;
	border: 1px #2b2b2b solid;
	border-width: 0px 1px;
	margin-right: 20px;
}

.footer #middleColumn #bottom {
	border-top: 1px #2b2b2b solid;
	padding-top: 1.4em;
	clear: both;	
}

.footer #middleColumn #bottom div, .footer #middleColumn #top div {
	width: 190px;
	float: left;
}

.footer #middleColumn .rightCol {
	padding-left: 30px;
}

.footer #rightColumn {
	width: 200px
}

.footer #copyright {
	clear: both;
	width: 1000px;
	padding-top: 20px;
	border-top: 1px #2b2b2b solid;
	float: left;
}

.footer #leftColumn ul {
	list-style: none;
	margin: 0px;
}

.footer #leftColumn ul img {
	width: 90px;
	height: 80px;
	background-color: #333;
	float: left;
	margin-right: 20px;
}
.footer #leftColumn ul .alternate img {
	float: right;
	margin-left: 20px;
	margin-right: 0px;
}

.footer #leftColumn ul .alternate {
	text-align: right;
}

.footer #leftColumn ul li {
	list-style: none;
	margin: 0px;
	clear: both;
	overflow: hidden;
	padding-bottom: 20px;
}

.footer #delicious p a {
	font-variant: small-caps;
	letter-spacing: 0.08em;
	
}

.footer a.nobg {
	background: none;
	padding: 0px;
}
.footer a.nobg:hover {
	background: none;
}
/*-------------------------------- 		<tweet blender overides> */

.footer #middleColumn div.tb_tweet, 
.footer #middleColumn div.tb_tweetlist { border: none;}

div.tb_msg { display: none; }

div.tb_tweet { padding: 0px; }

.footer #middleColumn a:hover { text-decoration: none; }

.footer a.tb_photo { background-color: transparent; }

/*-------------------------------- 		</tweet blender overides> */

#friendfeed.widget,
div#friendfeed.widget div,
div#friendfeed.widget span,
div#friendfeed.widget img,
div#friendfeed.widget table,
div#friendfeed.widget tr,
div#friendfeed.widget a,
div#friendfeed.widget td {
  position: relative;
  background-color: inherit !important;
  color: inherit !important;
  padding: 0 !important;
  margin: 0 !important;
  border: 0 !important;
  text-align: left;
  font-size: inherit !important;
  line-height: inherit !important;
  width: auto;
  float: none;
}

#friendfeed.widget {
  color: inherit !important;
  font-family: inherit !important;
  font-size: inherit !important;
  position: relative;
  border: 0px !important;
  overflow: hidden;
}


/*-------------------------------- </footer> */

